--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
          "manager",
          "Miku"
       ],   
-   "repository": "https://github.com/h0daka/Miku-Nakano",
+   "repository": "https://github.com/Soumyabrata-eng/Miku-Nakano",
    "addons": [
       {
          "options": {
@@ -148,12 +148,7 @@
       "DEL_CMDS": {
          "description": "Set this to True if you want to delete command messages from users who don't have the perms to run that command.",
          "value": "True"
-      },
-      "AI_API_KEY": {
-      "description": "Make your bot talk using Intellivoid's chatbot API, get your key from https://coffeehouse.intellivoid.net/",
-         "required": false,
-         "value": ""
-   },      
+      },    
       "BAN_STICKER": {
          "description": "ID of the sticker you want to use when banning people.",
          "required": false,
